Code editor: virtual area editor, add map resize dialog support

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -1085,7 +1085,7 @@ input[type=checkbox].property-grid-editor {
     font-weight: bold;
 }
 
-
+/*
 .resize-dialog .dialog-body button {
     width:48px;
     height:48px;
@@ -1100,3 +1100,4 @@ input[type=checkbox].property-grid-editor {
     padding: 2px;
     margin: 0px;
 }
+*/
