Code editor: area designer, add basic interfaces for monstrs/objects assign datatypes to monster and obejct fields, add living/object places in roompreview

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -622,6 +622,16 @@ cause test to be brighter but more bold looking
     color: rgb(0, 128, 0);
 }
 
+.room-living {
+    width: 100%;
+    color: rgb(255, 0, 0);
+}
+
+.room-objects {
+    width: 100%;
+    color: rgb(255, 0, 255);
+}
+
 .raw {
     left: 0;
     right: 0;
