Property editor: add default value styling support

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -738,6 +738,10 @@ cause test to be brighter but more bold looking
     top: 0;
 }
 
+.property-grid-item-value.default {
+    font-weight: bold;
+}
+
 .property-grid-item-value.readonly {
     background-color: #fafafa;
     color: silver;
