Refresh status display on setting change, fix invalid path for some monster icons, fix -# in needed xp as progress bar

--- a/src/css/monsters.scss
+++ b/src/css/monsters.scss
@@ -209,7 +209,7 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-arachnid {
-    background-image: url(#{$monsters}/dc-mon/aniamls/redback-2.png);
+    background-image: url(#{$monsters}/dc-mon/animals/redback-2.png);
 }
 
 /*
@@ -224,11 +224,11 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-bat {
-    background-image: url(#{$monsters}/dc-mon/aniamls/giant_bat.png);
+    background-image: url(#{$monsters}/dc-mon/animals/giant_bat.png);
 }
 
 .monster-bear {
-    background-image: url(#{$monsters}/dc-mon/aniamls/bear.png);
+    background-image: url(#{$monsters}/dc-mon/animals/bear.png);
 }
 
 /*
@@ -249,7 +249,7 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-bug {
-    background-image: url(#{$monsters}/dc-mon/aniamls/boulder_beetle.png);
+    background-image: url(#{$monsters}/dc-mon/animals/boulder_beetle.png);
 }
 
 /*
@@ -433,19 +433,19 @@ $monsters: "./../../assets/monsters";
 }
 
 .monster-human {
-    background-image: url(#{$monsters}/dc-mon/aniamls/human.png);
+    background-image: url(#{$monsters}/dc-mon/animals/human.png);
 }
 
 .monster-humanoid {
-    background-image: url(#{$monsters}/dc-mon/aniamls/human.png);
+    background-image: url(#{$monsters}/dc-mon/animals/human.png);
 }
 
 .monster-insect {
-    background-image: url(#{$monsters}/dc-mon/aniamls/boulder_beetle.png);
+    background-image: url(#{$monsters}/dc-mon/animals/boulder_beetle.png);
 }
 
 .monster-insectoid {
-    background-image: url(#{$monsters}/dc-mon/aniamls/boulder_beetle.png);
+    background-image: url(#{$monsters}/dc-mon/animals/boulder_beetle.png);
 }
 
 .monster-kangaroo {
@@ -491,11 +491,11 @@ $monsters: "./../../assets/monsters";
 }
 
 .monster-lupine {
-    background-image: url(#{$monsters}/dc-mon/aniamls/wolf.png);
+    background-image: url(#{$monsters}/dc-mon/animals/wolf.png);
 }
 
 .monster-mammal {
-    background-image: url(#{$monsters}/dc-mon/aniamls/rat.png);
+    background-image: url(#{$monsters}/dc-mon/animals/rat.png);
 }
 
 .monster-mammoth {
@@ -576,7 +576,7 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-pig {
-    background-image: url(#{$monsters}/dc-mon/aniamls/hog.png);
+    background-image: url(#{$monsters}/dc-mon/animals/hog.png);
 }
 
 .monster-plant {
@@ -611,12 +611,12 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-reptile {
-    background-image: url(#{$monsters}/dc-mon/aniamls/alligator.png);
+    background-image: url(#{$monsters}/dc-mon/animals/alligator.png);
     background-position: -640px -32px;
 }
 
 .monster-rodent {
-    background-image: url(#{$monsters}/dc-mon/aniamls/rat.png);
+    background-image: url(#{$monsters}/dc-mon/animals/rat.png);
     background-position: -640px -32px;
 }
 
@@ -627,7 +627,7 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-scorpion {
-    background-image: url(#{$monsters}/dc-mon/aniamls/giant_scorpion.png);
+    background-image: url(#{$monsters}/dc-mon/animals/giant_scorpion.png);
     background-position: -640px -32px;
 }
 
@@ -638,15 +638,15 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-queen-ant {
-    background-image: url(#{$monsters}/dc-mon/aniamls/queen_ant.png);
+    background-image: url(#{$monsters}/dc-mon/animals/queen_ant.png);
 }
 
 .monster-serpant {
-    background-image: url(#{$monsters}/dc-mon/aniamls/snake.png);
+    background-image: url(#{$monsters}/dc-mon/animals/snake.png);
 }
 
 .monster-sheep {
-    background-image: url(#{$monsters}/dc-mon/aniamls/sheep.png);
+    background-image: url(#{$monsters}/dc-mon/animals/sheep.png);
 }
 
 /*
@@ -656,11 +656,11 @@ $monsters: "./../../assets/monsters";
 }
 */
 .monster-snake {
-    background-image: url(#{$monsters}/dc-mon/aniamls/snake.png);
+    background-image: url(#{$monsters}/dc-mon/animals/snake.png);
 }
 
 .monster-spider {
-    background-image: url(#{$monsters}/dc-mon/aniamls/redback-2.png);
+    background-image: url(#{$monsters}/dc-mon/animals/redback-2.png);
 }
 
 .monster-squid {
@@ -693,7 +693,7 @@ $monsters: "./../../assets/monsters";
 }
 
 .monster-swine {
-    background-image: url(#{$monsters}/dc-mon/aniamls/hog.png);
+    background-image: url(#{$monsters}/dc-mon/animals/hog.png);
 }
 
 .monster-tree {
