Mapper: improve drawing performance to make mapper scroll faster and smoother

--- a/src/css/mapper.scss
+++ b/src/css/mapper.scss
@@ -10,7 +10,17 @@ $mapper: './../../assets/mapper';
     padding: 0px;
     margin: 0px;
     z-index: 1;
-    display: block;
+    display: block;  
+}
+
+.map-canvas {
+    image-rendering: optimizeSpeed;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    outline: none;
 }
 
 .MapperNavButton {
