--- a/src/css/help.scss
+++ b/src/css/help.scss
@@ -71,7 +71,7 @@ body {
     position: absolute;
     top: 2px;
     right: 5px;
-    left: 64px;
+    left: 72px;
 }
 
 .path-container .btn-group {
@@ -256,6 +256,11 @@ body {
 #container hr,
 #container table > tbody > tr + tr > td {
 	border-color: rgba(0, 0, 0, 0.18);
+}
+
+#btn-history-dropdown, .btn-caret {
+    min-width: auto !important;
+    padding: 1px 2px;
 }
 
 
