--- a/src/css/help.scss
+++ b/src/css/help.scss
@@ -182,6 +182,11 @@ body {
 	border-bottom-style: solid;
 }
 
+#container h1:first-of-type {
+    padding-top: 0px;
+    margin-top: 0px;
+}
+
 #container h1, 
 #container h2, 
 #container h3 {
