Code editor: fix newlines for hover tips not working right

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -1226,7 +1226,7 @@ input[type=checkbox].property-grid-editor {
 }
 
 .monaco-editor-hover-content .hover-row p {
-    padding-bottom: 15px;
+    /*padding-bottom: 15px;*/
 }
 
 .monaco-editor-hover-content .hover-row p:last-child {
