--- a/src/css/immortal.scss
+++ b/src/css/immortal.scss
@@ -164,7 +164,11 @@ body {
 
 .path-container .input-group button {
     height: 26px;
-    padding-top: 2px;
+    padding-top: 6px;
+}
+
+.path-container .caret {
+    margin-top: -9px;
 }
 
 #local {
