--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -33,8 +33,16 @@ dialog {
     border-top: 1px solid #ddd;
 }
 
-.dialog-footer .btn, .dialog-footer .btn-group {
+.bootstrap-select .selected.active, .bootstrap-select .selected.active:hover {
+    color: black;
+}
+
+.dialog-footer .btn, .dialog-footer .btn-group, .dialog-footer .bootstrap-select  {
     margin: 5px;
+}
+
+.dialog-footer .bootstrap-select .btn, .dialog-footer .bootstrap-select .btn-group  {
+    margin: 0px;
 }
 
 .dialog-footer .btn-group .btn {
