Code editor: add hover tabe effects

--- a/src/css/cm.scss
+++ b/src/css/cm.scss
@@ -76,6 +76,12 @@ $tabHeight: 26;
     outline: none;
 }
 
+.cm-tabstrip li:hover {
+    background-color: #dedede;
+    color: white;
+    text-shadow: none;
+}
+
 /*
 .cm-tabstrip li:before,
 .cm-tabstrip li:after {
