Status: fix sleet weather overlay

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -370,7 +370,7 @@ body {
 }
 
 .weather-sleet #environmentweather {
-    background-image: url("#{$images}/status/weatherssleet.png");
+    background-image: url("#{$images}/status/weathersleet.png");
 }
 
 .weather-sleet.intensity-hard #environmentweather {
