--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -374,7 +374,7 @@ body {
 }
 
 .weather-sleet #environmentweather {
-    background-image: url("#{$images}/status/weatherssleet.png");
+    background-image: url("#{$images}/status/weathersleet.png");
 }
 
 .weather-sleet.intensity-hard #environmentweather {
