Display: performance tweaks and caching to speed up

--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -114,6 +114,9 @@
 }
 
 .scroll-corner {
+    position: absolute;
+    right: 0;
+    bottom: 0;
     box-sizing: border-box;
     width: 12px;
     height: 12px;
